// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputLabel /> renders InputLabel with props 1`] = `
<label
  className="mfui-input-label"
  htmlFor="htmlFor"
>
  <Paragraph
    color="freshAsphalt"
    margin={true}
    size="regular"
  >
    test
  </Paragraph>
</label>
`;

exports[`<InputLabel /> renders InputLabel without props 1`] = `
<label
  className="mfui-input-label"
>
  <Paragraph
    color="freshAsphalt"
    margin={true}
    size="regular"
  >
    test
  </Paragraph>
</label>
`;
